--- a/radial/ui/uiLevel_2/polygons_component_submenu.ui
+++ b/radial/ui/uiLevel_2/polygons_component_submenu.ui
@@ -569,6 +569,37 @@
      </palette>
     </property>
    </widget>
+   <widget class="ToolButton" name="tb001">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>385</x>
+      <y>220</y>
+      <width>56</width>
+      <height>19</height>
+     </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>111</width>
+      <height>19</height>
+     </size>
+    </property>
+    <property name="toolTip">
+     <string>Create a bridge between two sets of edges or faces</string>
+    </property>
+    <property name="text">
+     <string>Bridge</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>18</width>
+      <height>18</height>
+     </size>
+    </property>
+   </widget>
   </widget>
  </widget>
  <customwidgets>
