--- a/radial/ui/uiLevel_2/rigging_submenu.ui
+++ b/radial/ui/uiLevel_2/rigging_submenu.ui
@@ -119,7 +119,7 @@
      <string>Reroot</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="b005">
+   <widget class="ToolButton" name="tb002">
     <property name="geometry">
      <rect>
       <x>165</x>
