--- a/radial/ui/uiLevel_2/animation_submenu.ui
+++ b/radial/ui/uiLevel_2/animation_submenu.ui
@@ -171,6 +171,43 @@
      <string>Rigging</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="b000">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>265</x>
+      <y>250</y>
+      <width>76</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>20</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>999</width>
+      <height>20</height>
+     </size>
+    </property>
+    <property name="toolTip">
+     <string>Delete keys for the currently selected object(s).</string>
+    </property>
+    <property name="text">
+     <string>Delete Keys</string>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>18</width>
+      <height>18</height>
+     </size>
+    </property>
+   </widget>
   </widget>
  </widget>
  <resources/>
