--- a/radial/ui/uiLevel_3/animation.ui
+++ b/radial/ui/uiLevel_3/animation.ui
@@ -120,9 +120,9 @@
              <number>0</number>
             </property>
             <item>
-             <widget class="QPushButton" name="b2211">
+             <widget class="QPushButton" name="b000">
               <property name="enabled">
-               <bool>false</bool>
+               <bool>true</bool>
               </property>
               <property name="minimumSize">
                <size>
@@ -137,75 +137,16 @@
                </size>
               </property>
               <property name="toolTip">
-               <string>Toggle Animation Time and Range Sliders</string>
+               <string>Delete keys for the currently selected object(s).</string>
               </property>
               <property name="text">
-               <string>Time &amp; Range Slider</string>
+               <string>Delete Keys</string>
               </property>
               <property name="iconSize">
                <size>
                 <width>18</width>
                 <height>18</height>
                </size>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="b0271">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>20</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>999</width>
-                <height>20</height>
-               </size>
-              </property>
-              <property name="toolTip">
-               <string>Render Current Frame</string>
-              </property>
-              <property name="text">
-               <string>Render</string>
-              </property>
-              <property name="iconSize">
-               <size>
-                <width>18</width>
-                <height>18</height>
-               </size>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="b1321">
-              <property name="enabled">
-               <bool>false</bool>
-              </property>
-              <property name="minimumSize">
-               <size>
-                <width>0</width>
-                <height>20</height>
-               </size>
-              </property>
-              <property name="maximumSize">
-               <size>
-                <width>999</width>
-                <height>20</height>
-               </size>
-              </property>
-              <property name="toolTip">
-               <string>Creates a locator object on the grid</string>
-              </property>
-              <property name="layoutDirection">
-               <enum>Qt::LeftToRight</enum>
-              </property>
-              <property name="text">
-               <string>Locator</string>
               </property>
              </widget>
             </item>
