--- a/radial/ui/uiLevel_1/main.ui
+++ b/radial/ui/uiLevel_1/main.ui
@@ -71,6 +71,34 @@
          <height>101</height>
         </rect>
        </property>
+       <widget class="QPushButton" name="i000">
+        <property name="geometry">
+         <rect>
+          <x>95</x>
+          <y>30</y>
+          <width>121</width>
+          <height>21</height>
+         </rect>
+        </property>
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>21</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>21</height>
+         </size>
+        </property>
+        <property name="whatsThis">
+         <string>main_lower</string>
+        </property>
+        <property name="text">
+         <string>History</string>
+        </property>
+       </widget>
       </widget>
       <widget class="QWidget" name="main" native="true">
        <property name="geometry">
@@ -370,6 +398,9 @@
          <width>306</width>
          <height>101</height>
         </rect>
+       </property>
+       <property name="whatsThis">
+        <string>main_lower</string>
        </property>
       </widget>
       <widget class="QWidget" name="w001" native="true">
