--- a/radial/ui/uiLevel_2/cameras_lower_submenu.ui
+++ b/radial/ui/uiLevel_2/cameras_lower_submenu.ui
@@ -201,9 +201,9 @@
       <widget class="QPushButton" name="i000">
        <property name="geometry">
         <rect>
-         <x>280</x>
+         <x>240</x>
          <y>190</y>
-         <width>21</width>
+         <width>96</width>
          <height>21</height>
         </rect>
        </property>
@@ -219,11 +219,8 @@
          <height>21</height>
         </size>
        </property>
-       <property name="toolTip">
-        <string/>
-       </property>
-       <property name="text">
-        <string/>
+       <property name="whatsThis">
+        <string>cameras_lower</string>
        </property>
       </widget>
       <zorder>i000</zorder>
