--- a/radial/ui/uiLevel_2/editors_lower_submenu.ui
+++ b/radial/ui/uiLevel_2/editors_lower_submenu.ui
@@ -114,9 +114,9 @@
       <widget class="QPushButton" name="i000">
        <property name="geometry">
         <rect>
-         <x>280</x>
+         <x>250</x>
          <y>190</y>
-         <width>21</width>
+         <width>81</width>
          <height>21</height>
         </rect>
        </property>
@@ -132,14 +132,8 @@
          <height>21</height>
         </size>
        </property>
-       <property name="toolTip">
-        <string/>
-       </property>
        <property name="whatsThis">
-        <string/>
-       </property>
-       <property name="text">
-        <string/>
+        <string>editors_lower</string>
        </property>
       </widget>
       <zorder>i000</zorder>
