--- a/radial/ui/uiLevel_2/main_lower_submenu.ui
+++ b/radial/ui/uiLevel_2/main_lower_submenu.ui
@@ -126,6 +126,33 @@
         </property>
        </item>
       </widget>
+      <widget class="QPushButton" name="i000">
+       <property name="geometry">
+        <rect>
+         <x>250</x>
+         <y>190</y>
+         <width>76</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>0</width>
+         <height>21</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>16777215</width>
+         <height>21</height>
+        </size>
+       </property>
+       <property name="whatsThis">
+        <string>main_lower</string>
+       </property>
+      </widget>
+      <zorder>i000</zorder>
+      <zorder>tree000</zorder>
      </widget>
     </item>
    </layout>
