--- a/radial/ui/uiLevel_1/cameras.ui
+++ b/radial/ui/uiLevel_1/cameras.ui
@@ -37,6 +37,9 @@
   <property name="windowTitle">
    <string>Toolkit</string>
   </property>
+  <property name="whatsThis">
+   <string>cameras</string>
+  </property>
   <property name="tabShape">
    <enum>QTabWidget::Triangular</enum>
   </property>
