--- a/radial/ui/uiLevel_2/rigging_submenu.ui
+++ b/radial/ui/uiLevel_2/rigging_submenu.ui
@@ -190,6 +190,37 @@
      <string>Aim Constraint</string>
     </property>
    </widget>
+   <widget class="ToolButton" name="tb003">
+    <property name="geometry">
+     <rect>
+      <x>195</x>
+      <y>190</y>
+      <width>119</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>0</width>
+      <height>20</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>999</width>
+      <height>20</height>
+     </size>
+    </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Create locators with the same transforms as any selected object(s).&lt;/p&gt;&lt;p&gt;If there are vertices selected it will create a locator at the center of the selected vertices bounding box.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
+    <property name="text">
+     <string>Create Locator at Sel</string>
+    </property>
+    <property name="checkable">
+     <bool>true</bool>
+    </property>
+   </widget>
   </widget>
  </widget>
  <customwidgets>
