--- a/radial/ui/uiLevel_3/animation.ui
+++ b/radial/ui/uiLevel_3/animation.ui
@@ -120,6 +120,31 @@
              <number>0</number>
             </property>
             <item>
+             <widget class="ToolButton" name="tb000">
+              <property name="minimumSize">
+               <size>
+                <width>0</width>
+                <height>20</height>
+               </size>
+              </property>
+              <property name="maximumSize">
+               <size>
+                <width>999</width>
+                <height>20</height>
+               </size>
+              </property>
+              <property name="toolTip">
+               <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Set the current frame on the timeslider.&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              </property>
+              <property name="text">
+               <string>Set Current Frame</string>
+              </property>
+              <property name="checkable">
+               <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item>
              <widget class="QPushButton" name="b000">
               <property name="enabled">
                <bool>true</bool>
@@ -211,6 +236,11 @@
   </widget>
  </widget>
  <customwidgets>
+  <customwidget>
+   <class>ToolButton</class>
+   <extends>QToolButton</extends>
+   <header>widgets.toolbutton.h</header>
+  </customwidget>
   <customwidget>
    <class>PushButtonDraggable</class>
    <extends>QPushButton</extends>
